syntax = "proto3";

option csharp_namespace = "GrpcClient";

package lab1;

service ServiceKorisnik {
	rpc DodajKorisnika(Korisnik) returns (Poruka);
	rpc PreuzmiKorisnika(Id) returns (Korisnik);
	rpc ObrisiKorisnika(Id) returns (Poruka);
	rpc IzmeniKorisnika(Korisnik) returns (Poruka);
	rpc PreuzmiKorisnike(OpsegId) returns (stream Korisnik);
	rpc ObrisiKorisnike(stream Id) returns (stream Poruka);
}

message Korisnik {
	int32 id = 1;
	string ime = 2;
	string prezime = 3;
	optional string adresa = 4;
	repeated string brTelefona = 5;
}

message Id {
	int32 id = 1;
}

message Poruka {
	string tekst = 1;
}

message OpsegId {
	int32 idOd = 1;
	int32 idDo = 2;
}